fix: correct gap between blocks

--- a/shelter/blocks/pets/pets.scss
+++ b/shelter/blocks/pets/pets.scss
@@ -11,7 +11,6 @@
   @media screen and (max-width: $breakpoint-tablet) {
     padding-left: 30px;
     padding-right: 30px;
-    padding-bottom: 76px;
   }
   @media screen and (max-width: $breakpoint-extra-m) {
     gap: 42px;
